src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>E2CP__SubStatus__c</fullName>
        <description>This field is deprecated. Do not use it.</description>
        <inlineHelpText>E2CP Deprecated field...part of managed package.</inlineHelpText>
        <label>SubStatus (Deprecated)</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unfinished</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Important</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASAP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EIG_ID__c</fullName>
        <description>Migrations : for EIG project; formula pulls EIG ID from associated subscription</description>
        <formula>IF( ISBLANK( Opportunity__c ) = FALSE, Opportunity__r.SBD_Store_ID__c, 
IF( ISBLANK( Subscription__c ) = FALSE, Subscription__r.SBD_Store_ID__c , 
NULL))</formula>
        <inlineHelpText>Migrations : for EIG project; formula pulls EIG ID from associated subscription</inlineHelpText>
        <label>Migration SBD EIG ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edit__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;&amp;Id&amp;&apos;/e&apos;,&apos;edit&apos;,&apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Log__c</fullName>
        <label>Email Log</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_Recd_Closed_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to fire workflow when an email is received for a closed case</description>
        <inlineHelpText>Used to fire workflow when an email is received for a closed case</inlineHelpText>
        <label>Email Recd Closed Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Support_New_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Support : Used to determine new case emails sent to support@bigcommerce.com and fire WFRs - new cases are not supported at this address</description>
        <inlineHelpText>Used to determine new case emails sent to support@bigcommerce.com - new cases are not supported at this address</inlineHelpText>
        <label>Email Support New Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Escalated_By__c</fullName>
        <description>Support : user taking action that causes the escalation workflow to fire</description>
        <label>Escalated By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Support : populated by WFR when a case is escalated via ownership, status or status reason</description>
        <inlineHelpText>Has this case ever been transferred to one of the Escalation queues?</inlineHelpText>
        <label>Escalated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Escalation_Date__c</fullName>
        <description>Support : Populated via workflow - last date case was set to Escalated status</description>
        <inlineHelpText>Populated via workflow - last date case was set to Escalated status</inlineHelpText>
        <label>Escalation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Escalation_Reason__c</fullName>
        <description>Support : Populated via workflow when case saved with escalation reason (last)</description>
        <inlineHelpText>Populated via workflow when case saved with escalation reason (last)</inlineHelpText>
        <label>Escalation Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Article_Title__c</fullName>
        <inlineHelpText>If you chose an existing article, please enter the title for that article here</inlineHelpText>
        <label>Existing Article Title</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTP_Host_Name__c</fullName>
        <description>Migrations : needed for team to know which CSVs are associated to this store migration</description>
        <label>FTP Host Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTP_Password__c</fullName>
        <description>Migrations : needed for team to know which CSVs are associated to this store migration</description>
        <label>FTP Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTP_Port__c</fullName>
        <description>Migrations : needed for team to know which CSVs are associated to this store migration</description>
        <label>zFTP Port</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTP_User_Name__c</fullName>
        <description>Migrations : needed for team to know which CSVs are associated to this store migration</description>
        <label>FTP User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feedback__c</fullName>
        <description>Support : survey field for client comments</description>
        <inlineHelpText>Please provide any additional feedback in regards to your case</inlineHelpText>
        <label>Feedback</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>First_Response_Date_Time__c</fullName>
        <label>First Response Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Flag_Indicator__c</fullName>
        <description>Visual image/representation of the value in the Case Flag field; for list views</description>
        <formula>CASE(Case_Flag__c,
&quot;Red&quot;, IMAGE(&quot;/resource/CS_Flag_Red&quot;, &quot;Red&quot;),
&quot;Green&quot;, IMAGE(&quot;/resource/CS_Flag_Green&quot;, &quot;Green&quot;),
&quot;Yellow&quot;, IMAGE(&quot;/resource/CS_Flag_Yellow&quot;, &quot;Yellow&quot;),
&quot;Orange&quot;, IMAGE(&quot;/resource/CS_Flag_Orange&quot;, &quot;Orange&quot;),
&quot;Blue&quot;, IMAGE(&quot;/resource/CS_Flag_Blue&quot;, &quot;Blue&quot;),
&quot;Purple&quot;, IMAGE(&quot;/resource/CS_Flag_Purple&quot;, &quot;Purple&quot;),
&quot;PXU&quot;,  IMAGE(&quot;https://c.na19.content.force.com/servlet/servlet.FileDownload?file=01513000003KR4a&quot;, &quot;Pixel Union&quot;), 
NULL)</formula>
        <label>Flag Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_Open__c</fullName>
        <description>Formula calculating how many hours have passed from the time the case was opened to closed (# of days * 24)</description>
        <formula>IF( IsClosed = TRUE, (ClosedDate -  CreatedDate)* 24,(NOW() -  CreatedDate)* 24)</formula>
        <label>Hours Open</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Improper_Escalation_Reason__c</fullName>
        <description>Why is the Case Escalation being flagged as improper?</description>
        <inlineHelpText>Why is the Case Escalation being flagged as improper?</inlineHelpText>
        <label>Improper Escalation Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Improper_Escalation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field to used to note if a case was improperly escalated.</description>
        <inlineHelpText>Managers and Escalation team members - use this checkbox to denote if a case is improperly escalated.</inlineHelpText>
        <label>Improper Escalation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incident__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Support : link to the incident record (if associated); used to group cases that are related to the same issue</description>
        <label>zIncident</label>
        <referenceTo>Incident__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Insight_Service_1st_Invoice_Amount__c</fullName>
        <label>Insight Service 1st Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insight_Service_1st_Invoice_Date__c</fullName>
        <description>Insight Billing service 1st invoice date</description>
        <inlineHelpText>Insight Billing service 1st invoice date</inlineHelpText>
        <label>Insight Service 1st Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insight_Service_Status__c</fullName>
        <description>Insight Billing service activation status</description>
        <inlineHelpText>Insight Billing service activation status</inlineHelpText>
        <label>Insight Service Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internal_Content__c</fullName>
        <inlineHelpText>Content that will only be visible to Bigcommerce employees and staff</inlineHelpText>
        <label>Internal Content</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Intersire_Staging_URL__c</fullName>
        <description>Migrations : link to migration store while it is being worked on; may change after completed</description>
        <label>zIntersire Staging URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Invalid_Credentials_Detail__c</fullName>
        <description>Include details on what was invalid and what you need to move forward with the migration</description>
        <inlineHelpText>Include details on what was invalid and what you need to move forward with the migration</inlineHelpText>
        <label>Invalid Credentials Detail</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Issue_Resolved__c</fullName>
        <description>Support : Y/N survey field</description>
        <inlineHelpText>Was the issue resolved?</inlineHelpText>
        <label>Issue Resolved?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Issues_Reported__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Migrations : has there been report of a migration issue</description>
        <inlineHelpText>Migrations : has there been report of a migration issue</inlineHelpText>
        <label>z Migration Issues Reported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JIRA_Current_Issue__c</fullName>
        <description>The JIRA ID of a current issue for knowledge to be written about</description>
        <inlineHelpText>If your request is regards a current or active JIRA, please provide the full URL here</inlineHelpText>
        <label>JIRA(Current Issue)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>JIRA_Fix_Version__c</fullName>
        <description>Populated with Jira data if the case is synced</description>
        <label>JIRA Fix Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JIRA_Link_Operations__c</fullName>
        <description>Formula creating a direct link to the Jira ticket if Jira Issue or Jira Ticket field is populated</description>
        <formula>IF( ISBLANK(Jira_Issue__c) = FALSE,(&apos;https://jira.bigcommerce.com/browse/&apos; + Jira_Issue__c),
IF(ISBLANK( JIRA_Ticket__c ),NULL,(&apos;https://jira.bigcommerce.com/browse/&apos; + JIRA_Ticket__c)
))</formula>
        <label>JIRA Link (Operations)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JIRA_Resolution__c</fullName>
        <description>Populated with Jira data if the case is synced</description>
        <label>JIRA Resolution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JIRA_Status__c</fullName>
        <description>Populated with Jira data if the case is synced</description>
        <label>JIRA Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JIRA_Ticket__c</fullName>
        <description>Migrations : Populated with Jira number if the case is synced</description>
        <label>JIRA Ticket</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Jira_Description__c</fullName>
        <description>Populated with Jira data if the case is synced</description>
        <label>Jira Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Jira_Issue__c</fullName>
        <description>Support : Populated with Jira data if the case is synced</description>
        <label>Jira Issue</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jira_Link__c</fullName>
        <description>Migrations : Populated with Jira data if the case is synced</description>
        <formula>IF( ISBLANK(Jira_Issue__c),null, 
IF (ISPICKVAL( Migration_Partner__c, &apos;EIG&apos;), (&apos;https://bigcommerce.atlassian.net/browse/&apos; + Jira_Issue__c),(&apos;https://jira.bigcommerce.com/browse/&apos; + Jira_Issue__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jira Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Knowledgeable__c</fullName>
        <description>Support : survey field</description>
        <inlineHelpText>Support Survey response. How knowledgeable is the person who assisted you?
1 Not satisfied | 5 very satisfied</inlineHelpText>
        <label>NPS Knowledgeable</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Case_Comment_Date__c</fullName>
        <description>Populated via workflow; captures date last comment created</description>
        <inlineHelpText>Populated via workflow.  Captures date last comment created.</inlineHelpText>
        <label>Last Case Comment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Launch_Status__c</fullName>
        <description>Cancellation Launch status - requested by AR-5168</description>
        <inlineHelpText>Was the store launched? For used by Cancellation team.</inlineHelpText>
        <label>Cancellation Launch Status</label>
        <picklist>
            <picklistValues>
                <fullName>Launched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Launched</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Launch_Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up field related to the user object.</description>
        <label>zLaunch Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_First_Name__c</fullName>
        <description>Formula pulling lead name so it can be used in email templates</description>
        <formula>Lead__r.FirstName</formula>
        <label>Lead First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Website__c</fullName>
        <description>Formula pulling Website value from the associated subscription&apos;s Lead; not sure what it&apos;s used for - maybe email template?</description>
        <formula>IF( Subscription__r.Lead__r.Website &lt;&gt; NULL,  Subscription__r.Lead__r.Website , 
IF(Lead__r.Website &lt;&gt; NULL,Lead__r.Website ,NULL))</formula>
        <inlineHelpText>Website value from the associated Lead</inlineHelpText>
        <label>Lead Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field used to associate cases to leads</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Case_ID__c</fullName>
        <description>Support : old case ID; can be deleted once all Kayoko cases are closed unless mgmt wants to keep it so they know how many cases migrated</description>
        <inlineHelpText>Support : old case ID; can be deleted once all Kayoko cases are closed unless mgmt wants to keep it so they know how many cases migrated</inlineHelpText>
        <label>zLegacy Case ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Issue_MBA_Sub_ID__c</fullName>
        <description>MBA Subscription ID of the store this legal case is against</description>
        <inlineHelpText>Used for legal cases - indicates the MBA subscription ID of the store that the case is lodged against</inlineHelpText>
        <label>Legal Issue MBA Sub ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_1_Support_Partner__c</fullName>
        <description>Support : built by SG; not sure of purpose</description>
        <label>zLevel 1 Support Partner</label>
        <picklist>
            <picklistValues>
                <fullName>EIG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heartland</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lifetime_GMV__c</fullName>
        <description>Lifetime GMV of store at case create</description>
        <inlineHelpText>Lifetime GMV of store at case create</inlineHelpText>
        <label>Lifetime GMV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Logos_Trust_Seals_Favicon_Misc_Con__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SSquad Unpacking type field</description>
        <label>zLogos Trust Seals / Favicon / Misc Con</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBA_Account_ID_Text__c</fullName>
        <label>zMBA Account ID Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBA_Account_ID__c</fullName>
        <description>Pulled from the associated store/subscription</description>
        <formula>IF( ISBLANK( Opportunity__c ) = FALSE, Opportunity__r.MBAAccountID__c,
IF( ISBLANK( Subscription__c ) = FALSE,Subscription__r.MBAAccountID__c,
NULL))</formula>
        <inlineHelpText>Pulled from the associated store/subscription</inlineHelpText>
        <label>MBA Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBA_Subscription_ID__c</fullName>
        <description>Pulled from the associated store/subscription</description>
        <formula>IF( ISBLANK( Opportunity__c ) = FALSE, Opportunity__r.MBASubscriptionID__c, 
IF( ISBLANK( Subscription__c ) = FALSE, Subscription__r.MBASubscriptionID__c , 
NULL))</formula>
        <inlineHelpText>Pulled from the associated store/subscription</inlineHelpText>
        <label>MBA Subscription ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIG_Credentials_Requests__c</fullName>
        <description>How many times has the migration team requested credentials from the client?</description>
        <inlineHelpText>How many times has the migration team requested credentials from the client?</inlineHelpText>
        <label>MIG: Credentials Requests</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MIG_UAT_Change_Made__c</fullName>
        <description>List changes made to store migration based on client&apos;s verification survey response</description>
        <inlineHelpText>List changes made to store migration based on client&apos;s verification survey response</inlineHelpText>
        <label>zMIG UAT Changes Made</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>MIG_UAT_Changed_Not_Made__c</fullName>
        <description>List changes NOT made to store migration based on client&apos;s verification survey response</description>
        <inlineHelpText>List changes NOT made to store migration based on client&apos;s verification survey response</inlineHelpText>
        <label>zMIG UAT Changed Not Made</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>MRR__c</fullName>
        <description>Store MRR at Case Open</description>
        <inlineHelpText>Store MRR at Case Open</inlineHelpText>
        <label>MRR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Manager_Callback_Date__c</fullName>
        <description>CS: Populated by workflow if the case owner is Support - Manager Callback queue</description>
        <label>Manager Callback Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Manager_Callback_Requestor__c</fullName>
        <description>CS: Populated by workflow if the case owner is Support - Manager Callback queue</description>
        <label>Manager Callback Requestor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Callback__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CS: Identifies cases that have been escalated and need a manager to call the client.  Populated by workflow if the case owner is Support - Manager Callback queue</description>
        <label>Manager Callback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Consultation_Topic__c</fullName>
        <label>zMarketing Consultation Topic</label>
        <picklist>
            <picklistValues>
                <fullName>Apps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion Techniques</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shopping Feeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Merge_Split_FROM_Account_Link__c</fullName>
        <description>Billing : MBA account link that the associated store will be moved FROM in MBA and Salesforce</description>
        <inlineHelpText>Enter the MBA account link that the associated store will be moved FROM in MBA and Salesforce</inlineHelpText>
        <label>Merge/Split FROM Account Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Merge_Split_TO_Account_Link__c</fullName>
        <description>Billing : MBA master account link that the associated store will be moved TO in MBA and Salesforce</description>
        <inlineHelpText>Enter the MBA master account link that the associated store will be moved TO in MBA and Salesforce</inlineHelpText>
        <label>Merge/Split TO Account Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Migration_Automated_Emails__c</fullName>
        <formula>/* True makes the case eligible for automatic emails via the Migration process builder process 
IF( 

(Not(Contains(Opportunity__r.Product__c, &apos;Enterprise&apos;)|| Contains(Opportunity__r.Product__c, &apos;Partner Sandbox&apos;))) 

|| (Contains(Opportunity__r.Product__c, &apos;Enterprise Tier 1&apos;)) || (Contains(Opportunity__r.Product__c, &apos;Enterprise Tier 2&apos;)) 

,true,false) */
IF( 

(Contains(Opportunity__r.Product__c, &apos;Partner Sandbox&apos;) 
|| Opportunity__r.Premium_Services__c = true 
|| Opportunity__r.Enterprise_Tier__c &gt;15
|| ISPICKVAL(Migration_Platform__c, &apos;Other&apos;)  )

,false,true)</formula>
        <label>Migration Automated Emails?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migration_Delay_Reason__c</fullName>
        <description>For SalesOps/Admins only: Multi-select picklist for reasons why data migration is delayed/blocked</description>
        <inlineHelpText>Select the reason(s) for why the data migration is unable to start, delayed, or otherwise blocked from progressing. The reasons selected are to provide insight into the length of time to complete data migrations, e.g. Time to Initial Completion</inlineHelpText>
        <label>zMigration Delay Reason(s)</label>
        <picklist>
            <picklistValues>
                <fullName>API / Advanced API not enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC server/db/platform issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client changed source store/data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrupt data source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data / Script issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FTP Unavailable/Connection Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid Source Admin / FTP / API details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP Whitelisting needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Source Store Plan Upgrade needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Source Store Unavailable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsupported migration/platform request</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Migration_Difficulty__c</fullName>
        <description>Migrations : picklist</description>
        <label>zMigration Difficulty</label>
        <picklist>
            <picklistValues>
                <fullName>Easy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Challenging</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Migration_Email_Type__c</fullName>
        <description>Returns 1 if Admin only or 2 if Admin and FTP</description>
        <formula>CASE(Migration_Platform__c,
&quot;1Shopping&quot;,1,
&quot;3dcart&quot;,1,
&quot;AmeriCommerce&quot;,1,
&quot;Amazon Webstore&quot;,1,
&quot;Amazon Webstores&quot;,1,
&quot;Ayacart&quot;,1,
&quot;Bigcommerce&quot;,1,
&quot;CoreCommerce&quot;,1,
&quot;GoDaddy&quot;,1,
&quot;Miva Merchant&quot;,1,
&quot;Miva Merchant V4&quot;,1,
&quot;Miva Merchant V5&quot;,1,
&quot;Network Solutions&quot;,1,
&quot;Portable Shops&quot;,1,
&quot;ProStores&quot;,1,
&quot;PureCommerce&quot;,1,
&quot;Shopify&quot;,1,
&quot;Volusion&quot;,1,
&quot;XCart&quot;,1,
&quot;Yahoo&quot;,1, 
&quot;Zoovy&quot;,1,2)</formula>
        <inlineHelpText>Returns 1 if Admin only or 2 if Admin and FTP</inlineHelpText>
        <label>Migration Email Type</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Migration_Escalation_Reason__c</fullName>
        <description>Provides a reason for migration case escalation, if the case is escalated</description>
        <inlineHelpText>Provides a reason for migration case escalation, if the case is escalated</inlineHelpText>
        <label>Migration Escalation Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Sales Expectation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migrated Platform Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bigcommerce Feature Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Communication Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration Took Too Long</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Scope Work Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Data</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Migration_Issues__c</fullName>
        <description>For SalesOps/Admins only: Multi-select picklist for issues experienced or reported during migration process</description>
        <inlineHelpText>Select the issues experienced during the migration process. The reasons selected are to provide context for future platform enhancement requests, client escalation/churn, tool improvement, etc.</inlineHelpText>
        <label>zMigration Issues</label>
        <picklist>
            <picklistValues>
                <fullName>BC server/db issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC Platform bug/issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC Platform/functionality gaps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrupt/inconsistent source data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customized source site/data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration script issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>301 issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category data/image issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product data issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product option/sku/rules issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product image issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Source Store Unavailable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Migration_Partner__c</fullName>
        <description>Migrations : The Channel or SBD Partner from whom the Migration Request is sourced.</description>
        <inlineHelpText>Who is the Channel or SBD Partner from whom the Migration Request is sourced?</inlineHelpText>
        <label>Migration Partner</label>
        <picklist>
            <picklistValues>
                <fullName>EIG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portable Studios</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>